Added Consumer/Producer configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# Database setup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://car-db:3306/car_db
+#spring.datasource.url=jdbc:mysql://car-db:3306/car_db
+spring.datasource.url=jdbc:mysql://localhost:3307/car_db
 spring.datasource.username=root
 spring.datasource.password=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Kafka setup
+kafka.bootstrapAddress=localhost:9092
