--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
     networks:
-      - test_1
+      - app-tier
 
   kafka:
     image: 'bitnami/kafka:latest'
@@ -17,7 +17,6 @@ services:
     ports:
       - '9092:9092'
     environment:
-      - KAFKA_BROKER_ID=1
       - KAFKA_LISTENERS=PLAINTEXT://:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
@@ -27,7 +26,7 @@ services:
     depends_on:
       - zookeeper
     networks:
-      - test_1
+      - app-tier
 
   car-db:
     image: mysql:8.0.22
@@ -36,25 +35,28 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: test
       MYSQL_DATABASE: car_db
+    ports:
+      - 3307:3306
     volumes:
       - my-data:/var/lib/mysql
     networks:
       - test_1
 
-  car-shop-app:
-    image: car-shop
-    build: ./..
-    hostname: car-shop
-    container_name: car-shop-container
-    depends_on:
-      - car-db
-    ports:
-      - 8080:8080
-    networks:
-      - test_1
+#  car-shop-app:
+#    image: car-shop
+#    build: ./..
+#    hostname: car-shop
+#    container_name: car-shop-container
+#    depends_on:
+#      - car-db
+#    ports:
+#      - 8080:8080
+#    networks:
+#      - test_1
 
 volumes:
   my-data:
 
 networks:
   test_1:
+  app-tier:
