Create a multi broker cluster

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Kafka setup
-kafka.bootstrapAddress=localhost:9092
+kafka.bootstrapAddress=localhost:9092,localhost:9093,localhost:9094
+
+
+
