--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+
   zookeeper:
     image: 'bitnami/zookeeper:latest'
     ports:
@@ -10,23 +11,89 @@ services:
     networks:
       - app-tier
 
-  kafka:
+  kafka1:
     image: 'bitnami/kafka:latest'
-    hostname: kafka.example.com
-    container_name: kafka-container
+    hostname: kafka1
     ports:
       - '9092:9092'
     environment:
-      - KAFKA_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka1:9092,PLAINTEXT_HOST://localhost:9092
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:29094,PLAINTEXT_HOST://0.0.0.0:9092
       - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
-      - "E:\\kafka-store:/bitnami/kafka"
+      - "E:\\kafka-store-1:/bitnami/kafka"
     depends_on:
       - zookeeper
     networks:
       - app-tier
+
+  kafka2:
+    image: 'bitnami/kafka:latest'
+    hostname: kafka2
+    ports:
+      - '9093:9093'
+    environment:
+      - KAFKA_BROKER_ID=2
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka2:9093,PLAINTEXT_HOST://localhost:9093
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:29094,PLAINTEXT_HOST://0.0.0.0:9093
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    volumes:
+      - "E:\\kafka-store-2:/bitnami/kafka"
+    depends_on:
+      - zookeeper
+    networks:
+      - app-tier
+
+  kafka3:
+    image: 'bitnami/kafka:latest'
+    hostname: kafka3
+    ports:
+      - '9094:9094'
+    environment:
+      - KAFKA_BROKER_ID=3
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka3:9094,PLAINTEXT_HOST://localhost:9094
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:29094,PLAINTEXT_HOST://0.0.0.0:9094
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    volumes:
+      - "E:\\kafka-store-3:/bitnami/kafka"
+    depends_on:
+      - zookeeper
+    networks:
+      - app-tier
+
+  #  zookeeper:
+  #    image: 'bitnami/zookeeper:latest'
+  #    ports:
+  #      - '2181:2181'
+  #    environment:
+  #      - ALLOW_ANONYMOUS_LOGIN=yes
+  #    networks:
+  #      - app-tier
+  #  kafka:
+  #    image: 'bitnami/kafka:latest'
+  #    container_name: kafka-container
+  #    ports:
+  #      - '9092:9092'
+  #    environment:
+  #      - KAFKA_BROKER_ID=1
+  #      - KAFKA_LISTENERS=PLAINTEXT://:9092
+  #      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+  #      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+  #      - ALLOW_PLAINTEXT_LISTENER=yes
+  #    volumes:
+  #      - "E:\\kafka-store:/bitnami/kafka"
+  #    depends_on:
+  #      - zookeeper
+  #    networks:
+  #      - app-tier
+
 
   car-db:
     image: mysql:8.0.22
@@ -40,7 +107,7 @@ services:
     volumes:
       - my-data:/var/lib/mysql
     networks:
-      - test_1
+      - app-tier
 
 #  car-shop-app:
 #    image: car-shop
@@ -52,11 +119,10 @@ services:
 #    ports:
 #      - 8080:8080
 #    networks:
-#      - test_1
+#      - app-tier
 
 volumes:
   my-data:
 
 networks:
-  test_1:
   app-tier:
